tests/duarouter/alternatives/style1_input/errors/routealt/routealt_id_missing/errors.duarouter
Error: Attribute 'id' is missing in definition of a routeDistribution.
Error: Attribute 'id' is missing in definition of a route.
Error: Route '' has no edges.
Error: The route of the vehicle '1' is not known.
Quitting (on error).
